--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <% if @user.is_logged_in? %>
-    <h1>Welcome <%= @user.username %></h1>
-    <h3>Your Balance: <%= @user.balance %></h3>
+    <% if @current_user.is_logged_in? %>
+    <h1>Welcome <%= @current_user.username %></h1>
+    <h3>Your Balance: <%= @current_user.balance %></h3>
     <% else %>
     <p>You must <a href="/">Log In</a> to View Your Balance</p>
 
