Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -11,7 +11,7 @@
     <h3>Your Balance: <%= @current_user.balance %></h3>
     <% else %>
     <p>You must <a href="/">Log In</a> to View Your Balance</p>
-
+    <% end %>
 
 
   </body>
