--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,13 +6,11 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <% if @current_user.is_logged_in? %>
+    <% if Helpers.is_logged_in?(session) %>
     <h1>Welcome <%= @current_user.username %></h1>
     <h3>Your Balance: <%= @current_user.balance %></h3>
-    <% else %>
-    <p>You must <a href="/">Log In</a> to View Your Balance</p>
+
+    <p><a href="/logout">Log Out</a></p>
     <% end %>
-
-
   </body>
 </html>
